// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _accessKey="V" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
            <span aria-hidden="true" class="badge-text-hint">
              V
            </span>
          </span>
        </span>
      </legend>
      <kol-input _accesskey="V" _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input accesskey="V" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _accesskey="V" _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input accesskey="V" id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _accesskey="V" _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input accesskey="V" id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _alert=true 1`] = `
<kol-input-radio _alert="" _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _disabled=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="disabled fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _disabled="" _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input disabled="" id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _disabled="" _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input disabled="" id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _hint="Hint" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input aria-describedby="id-nonce-hint" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input aria-describedby="id-nonce-hint" id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input aria-describedby="id-nonce-hint" id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <span class="hint">
        Hint
      </span>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-radio _hide-error="" _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset hidden-error vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _accessKey="V" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
            <span aria-hidden="true" class="badge-text-hint">
              V
            </span>
          </span>
        </span>
      </legend>
      <kol-input _accesskey="V" _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input accesskey="V" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _accesskey="V" _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input accesskey="V" id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _accesskey="V" _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input accesskey="V" id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _alert=true 1`] = `
<kol-input-radio _alert="" _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _disabled=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="disabled fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _disabled="" _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input disabled="" id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _disabled="" _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input disabled="" id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _hint="Hint" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input aria-describedby="id-nonce-hint" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input aria-describedby="id-nonce-hint" id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input aria-describedby="id-nonce-hint" id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <span class="hint">
        Hint
      </span>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-radio _hide-error="" _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset hidden-error horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _readOnly=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _readonly="" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _shortKey="S" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
            <span aria-hidden="true" class="badge-text-hint">
              S
            </span>
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _shortkey="S" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _shortkey="S" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _shortkey="S" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _touched=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" _touched="" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" _touched="" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" _touched="" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset horizontal">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _readOnly=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _readonly="" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _shortKey="S" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
            <span aria-hidden="true" class="badge-text-hint">
              S
            </span>
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _shortkey="S" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _shortkey="S" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _shortkey="S" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _touched=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" _touched="" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" _touched="" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" _touched="" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" class="kol-input-radio">
  <template shadowrootmode="open">
    <fieldset class="fieldset vertical">
      <legend class="block leading-normal mb-1 w-full">
        <span>
          <span slot="label">
            Label
          </span>
        </span>
      </legend>
      <kol-input _disabled="" _id="id-nonce-0" _label="Frau" _rendernolabel="" _slotname="radio-0" _tooltipalign="top" class="disabled radio">
        <div class="radio-input-wrapper" slot="radio-0">
          <input disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          <label class="radio-label" htmlfor="id-nonce-0">
            <span>
              <span class="radio-label-span-inner">
                Frau
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-1" _label="Herr" _rendernolabel="" _slotname="radio-1" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-1">
          <input id="id-nonce-1" name="field" type="radio" value="-1">
          <label class="radio-label" htmlfor="id-nonce-1">
            <span>
              <span class="radio-label-span-inner">
                Herr
              </span>
            </span>
          </label>
        </div>
      </kol-input>
      <kol-input _id="id-nonce-2" _label="Divers" _rendernolabel="" _slotname="radio-2" _tooltipalign="top" class="radio">
        <div class="radio-input-wrapper" slot="radio-2">
          <input id="id-nonce-2" name="field" type="radio" value="-2">
          <label class="radio-label" htmlfor="id-nonce-2">
            <span>
              <span class="radio-label-span-inner">
                Divers
              </span>
            </span>
          </label>
        </div>
      </kol-input>
    </fieldset>
  </template>
</kol-input-radio>
`;
